# software-factory-skill

./: .dockerignore  .gitignore  .mcp.json  .railwayignore  AGENTS.md  ARCHITECTURE.md  BABYSIT-run-79e88589.md  BABYSIT-run-c80b6eeb.md  BABYSIT-run-cdf0993f.md  CLAUDE.md  COORDINATION.md  Dockerfile  FINAL-REPORT-run-79e88589.md  GRAPH-RENDER-EXPLAINED.md  HANDOVER.md  MORNING-REPORT-run-79e88589.md  Makefile  PLAN-mock-deps-and-mcp-provisioning.md  PROPOSAL-software-factory-skill.md  Procfile  README.md  SKILL.md  SPEC.md  alembic.ini  conftest.py  entrypoint.sh  guardrails.md  memory.md  opencode.json  pyproject.toml  resolver.md
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  embeddings.json
.playwright-mcp/: page-2026-06-05T17-26-04-727Z.yml  page-2026-06-05T17-44-59-976Z.yml  page-2026-06-05T18-53-05-054Z.yml  page-2026-06-05T21-32-09-607Z.yml  page-2026-06-05T21-32-41-926Z.yml  page-2026-06-05T21-32-56-798Z.yml  page-2026-06-05T21-34-48-715Z.yml  page-2026-06-05T21-35-03-947Z.yml  page-2026-06-06T00-06-24-940Z.yml  page-2026-06-06T00-06-28-207Z.yml  page-2026-06-06T00-06-48-396Z.yml  page-2026-06-06T00-07-02-840Z.yml  page-2026-06-06T00-07-35-273Z.yml  page-2026-06-06T00-17-43-476Z.yml  page-2026-06-06T00-17-57-996Z.yml  page-2026-06-06T00-18-01-817Z.yml  page-2026-06-06T00-18-08-251Z.yml  page-2026-06-06T00-18-23-899Z.yml  page-2026-06-06T00-18-38-103Z.yml  page-2026-06-06T23-29-27-128Z.yml
.swarm/: hnsw.index  schema.sql
console/: app.py  chat_dock.py  chat_persistence.py  deps.py  index.html  log.py  login.html  poller.py  schemas.py  server.py  state.py  throttle.py
dashboard/: index.html  schema.sql
design/: ArtifactViewer.html  PRD.md  Software Factory Onboarding.html  TICKETS.md  admin.jsx  artifacts.jsx  artifactviewer.jsx  buildboard.jsx  buildprogress.jsx  concierge.jsx  dashboard.jsx  discovery.jsx  loadingshowcase.jsx  login.jsx  nodemap.jsx  optionC.jsx  orgproject.jsx  projectknowledge.jsx  recipedata.jsx  recipes.jsx  shared.jsx  users.jsx
docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  STRUCTURE.md  langfuse-telemetry-baseline.md  orchestration-framework-study.md  product-spec-software-factory.md  schema-erd.dot  schema-erd.md
migrations/: env.py
phases/: 00-provision.md  01-research-to-prd.md  02-codesign-architecture.md  02b-provision-infra.md  03-tickets.md  04-build-swarm.md  05-deploy.md  06-test-fix-loop.md
plans/: 2026-06-04-frontend-design-and-named-agents.md
scripts/: assert-railway-link.sh  backfill_sqlite_to_pg.py  benchmark_harness.py  benchmark_prompt_fetch.py  deploy-preflight.sh  deploy.sh  dev-console.sh  enable-auto-deploy.sh  eval_judge_run.py  migrate_to_flat.py  reconcile_orphan_dbs.py  run_autopsy_scan.py  seed_genre_recipes.py  setup-test-db.sh  verify_deps.py
(+457 files in other folders)
