[project]
name = "software-factory"
version = "0.0.1"
description = "Autonomous software factory — the engine, packaged as a tested skill pack"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live integration tests cost real money and need real creds; opt in explicitly.
addopts = "-m 'not live'"
markers = [
    "live: end-to-end run against real GitHub/Vercel/Supabase (spends real money; opt in with -m live)",
]

[tool.setuptools.packages.find]
where = ["src"]
