[project]
name = "software-factory"
version = "0.0.1"
description = "Autonomous software factory — the engine, packaged as a tested skill pack"
requires-python = ">=3.10"
dependencies = ["openai-agents>=0.1", "fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=6.2", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live integration tests cost real money and need real creds; opt in explicitly.
addopts = "-m 'not live'"
markers = [
    "live: end-to-end run against real GitHub/Vercel/Supabase (spends real money; opt in with -m live)",
]

[tool.setuptools.packages.find]
where = ["src"]
