[project]
name = "software-factory"
version = "0.0.1"
description = "Autonomous software factory — the engine, packaged as a tested skill pack"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "google-auth>=2.28",
    "python-dotenv>=1.0",
    "psycopg>=3.3.4",
    "httpx>=0.27",
    "langfuse>=4.12.0",
    "openinference-instrumentation-openai-agents>=1.6.1",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "pgvector>=0.3.6",
    "chonkie>=1.0",
    # doc extraction (pdf_extract.py / docx_extract.py) — lazily imported, so a plain top-level
    # import-smoke check misses them; scripts/verify_deps.py imports them explicitly too.
    "markitdown[pdf,docx]",
    "pypandoc_binary",
    "mammoth",
    "markdownify",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=6.2", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live integration tests cost real money and need real creds; opt in explicitly.
addopts = "-m 'not live'"
markers = [
    "live: end-to-end run against real GitHub/Vercel/Supabase (spends real money; opt in with -m live)",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
